# Brownfield-Cartographer

./: .env.example  .gitignore  LLM_README.md  Makefile  README.md  RECONNAISSANCE.md  TRP 1 Challenge Week 4_ The Brownfield Cartographer.md  build_all.py  build_grammars.sh  build_langs.py  build_minimal.py  example.py  pyproject.toml  test_yaml_parsing.py
docs/: analysis_results_20260310_134011.json  analysis_results_20260311_130957.json  analysis_results_20260311_132415.json  analysis_results_20260311_134017.json  analysis_results_20260311_134340.json  analysis_results_20260311_141043.json  analysis_results_20260311_142019.json
my_results/: surveyor_report_20260311_184727.json
scripts/: analyze_compiled_dbt.py
src/: cli.py  llm.py  orchestrator.py
src/agents/: archivist.py  dynamic_surveyor.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py  trace_logger.py
src/analyzers/: dag_config_parser.py  git_velocity.py  language_router.py  sql_analyzer.py  sql_lineage.py  tree_sitter_analyzer.py  yaml_analyzer.py
src/brownfield_cartographer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/graph/: knowledge_graph.py  module_import_graph.py
src/models/: edge_types.py  node_types.py
src/utils/: language_loader.py  loader.py
src/vectorstore/: base.py  embed_codebase.py  embedding.py  simple_numpy.py
tests/: test_git_velocity.py  test_module_import_graph.py
