[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "A multi-agent codebase intelligence system for data engineering codebases."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
